Changelog
=========

2.2.0 (unreleased)
------------------

- Refactor the comment creator/author_name to comply with the Plone core
  convention to store the username on the creator attribute and not the
  fullname.
  [timo]


2.1.8 (unreleased)
------------------

- Support for Dexterity added. The conversation enabled method now detects and
  supports Dexterity-based content types.
  [timo]

- No more recursive came_from redirection after logged_in.
  [kcleong, huubbouma]

- Danish translation updated.
  [stonor]

- Documentation and howtos updated.
  [timo]

- Remove development buildout files and directories.
  [timo]


2.1.7 (2012-06-29)
------------------

- Prune duplicated test code.
  [pjstevns]

- Update version in buildout.cfg to allow development.
  [pjstevns]

- Conversation.total_comments only counts published comments.
  Fixes bug #11591.
  [pjstevns]

- Set workflow status of comments during migration based on
  the state of the Discussion Item.
  [pjstevns]


2.1.6 (2012-05-30)
------------------

- Add Site Administrator role to Review comments permission.
  [gaudenz]

- Fix excessive JS comment deletion.
  [gaudenz]

- Hide Conversation objects from breadcrumb navigation. The breadcrumbs
  navigation is also used in the search results view. This lead to Conversation
  objects showing up if 'Discussion Items' are searchable.
  [gaudenz]

- No longer depend on zope.app packages.
  [hannosch]


2.1.5 (2012-04-05)
------------------

- Redirect to "/view" for Image, File and anything listed as requiring
  a view in the url to properly display comments.
  [eleddy]

- Make comments and controlpanel views more robust, so they don't break if no
  workflow is assigned to the 'Discussion Item' content type.
  [timo]

- Warning message added to discussion control panel that shows up if there are
  unmigrated comments.
  [timo]

- Make topic/collection tests pass when plone.app.collection is installed.
  [timo]


2.1.4 (2012-02-29)
------------------
